--- a/mission_to_mars_flask/templates/login.html
+++ b/mission_to_mars_flask/templates/login.html
@@ -4,26 +4,50 @@
 <div class="column is-4 is-offset-4">
     <h3 class="title">Login</h3>
     <div class="box">
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <div class="notification is-danger">
+            {{ messages[0] }}
+        </div>
+        {% endif %}
+        {% endwith %}
         <form method="POST" action="/login">
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="email" name="email" placeholder="Your Email" autofocus="">
+                    <input class="input is-large" type="email" name="email" placeholder="Your Email" autofocus="" required>
                 </div>
             </div>
 
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="password" name="password" placeholder="Your Password">
+                    <input class="input is-large" type="password" name="password" placeholder="Your Password" required>
                 </div>
             </div>
-            <div class="field">
-                <label class="checkbox">
+            <div class="field clearfix">
+                <label class="pull-left checkbox-inline">
                     <input type="checkbox">
                     Remember me
                 </label>
             </div>
+
             <button class="button is-block is-info is-large is-fullwidth">Login</button>
+            <!--TODO: add a proper forgot password page and link -->
+            <div class="field">
+                <a href="#" class="pull-right password-reset-link"><b>Forgot password?</b></a>
+            </div>
+            <hr>
+            <div class="field">
+                <p>Dont have an account?</p>
+            </div>
+            <a href="{{ url_for('auth.signup') }}">
+                <button class="button is-block is-info is-large is-fullwidth">
+                    Register
+                </button>
+            </a>
+
         </form>
     </div>
 </div>
+
+<script>
 {% endblock %}
