--- a/mission_to_mars_flask/templates/login.html
+++ b/mission_to_mars_flask/templates/login.html
@@ -14,13 +14,13 @@
         <form method="POST" action="/login">
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="email" name="email" placeholder="Your Email" autofocus="" required>
+                    <input class="input is-large" type="email" name="email" placeholder="Your Email" autofocus="">
                 </div>
             </div>
 
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="password" name="password" placeholder="Your Password" required>
+                    <input class="input is-large" type="password" name="password" placeholder="Your Password">
                 </div>
             </div>
             <div class="field clearfix">
