--- a/mission_to_mars_flask/templates/feature1.html
+++ b/mission_to_mars_flask/templates/feature1.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %} - mission list {% endblock %}
 
 {% block content %}
 <!-- TODO: align the code to to base.html -->
