--- a/mission_to_mars_flask/templates/feature2.html
+++ b/mission_to_mars_flask/templates/feature2.html
@@ -2,76 +2,77 @@
 
 {% block content %}
 <h1 class="title text-center">Select a Shuttle</h1>
-<div class="row">
-    <div class="col">
-        <div class="dropdown float-left ">
-            <select class="form-control" id="exampleFormControlSelect1">
-                {% for mission in mission_list %}
-                <option>{{ mission }}</option>
-                {% endfor %}
-            </select>
-        </div>
-    </div>
-    <div class="col">
-        <div class="dropdown float-right">
-            <select class="form-control" id="exampleFormControlSelect2">
-                {% for shuttle in shuttle_list %}
-                <option>{{ shuttle }}</option>
-                {% endfor %}
-            </select>
-        </div>
-    </div>
-</div>
-<br> <br>
-<div class="container">
+<form method="POST" action="/login">
     <div class="row">
-        <table class="table table-hover">
-            <thead>
-            <tr>
-                <th scope="col">Select</th>
-                <th scope="col">Name</th>
-                <th scope="col">Manufacturing Year</th>
-                <th scope="col">Fuel Capacity</th>
-                <th scope="col">Payload Capacity</th>
-                <th scope="col">Passenger Capacity</th>
-                <th scope="col">Cargo Capacity</th>
-                <th scope="col">TravelSpeed</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                {% for shuttle_detail in shuttle_details %}
-                <th scope="row"><label class="radio"> <input type="radio" name="shuttle-selected"></label></th>
-                <td scope="col">{{ shuttle_detail.name }}</td>
-                <td scope="col">{{ shuttle_detail.manufacturing_year }}</td>
-                <td scope="col">{{ shuttle_detail.fuel_capacity }}</td>
-                <td scope="col">{{ shuttle_detail.payload_capacity }}</td>
-                <td scope="col">{{ shuttle_detail.passenger_capacity }}</td>
-                <td scope="col">{{ shuttle_detail.cargo_capacity }}</td>
-                <td scope="col">{{ shuttle_detail.travel_speed }}</td>
-                {% endfor %}
-            </tr>
-            <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
-            </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td>Larry the Bird</td>
-                <td>I am Krishna</td>
-                <td>@twitter</td>
-            </tr>
-            </tbody>
-        </table>
+        <div class="col">
+            <div class="dropdown float-left ">
+                <select class="form-control" id="exampleFormControlSelect1">
+                    {% for mission in mission_list %}
+                    <option>{{ mission }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+        </div>
+        <div class="col">
+            <div class="dropdown float-right">
+                <select class="form-control" id="exampleFormControlSelect2">
+                    {% for shuttle in shuttle_list %}
+                    <option>{{ shuttle }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+        </div>
     </div>
-</div>
-
+    <br> <br>
+    <div class="container">
+        <div class="row">
+            <table class="table table-hover">
+                <thead>
+                <tr>
+                    <th scope="col">Select</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Manufacturing Year</th>
+                    <th scope="col">Fuel Capacity</th>
+                    <th scope="col">Payload Capacity</th>
+                    <th scope="col">Passenger Capacity</th>
+                    <th scope="col">Cargo Capacity</th>
+                    <th scope="col">TravelSpeed</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    {% for shuttle_detail in shuttle_details %}
+                    <th scope="row"><label class="radio"> <input type="radio" name="shuttle-selected"></label></th>
+                    <td scope="col">{{ shuttle_detail.name }}</td>
+                    <td scope="col">{{ shuttle_detail.manufacturing_year }}</td>
+                    <td scope="col">{{ shuttle_detail.fuel_capacity }}</td>
+                    <td scope="col">{{ shuttle_detail.payload_capacity }}</td>
+                    <td scope="col">{{ shuttle_detail.passenger_capacity }}</td>
+                    <td scope="col">{{ shuttle_detail.cargo_capacity }}</td>
+                    <td scope="col">{{ shuttle_detail.travel_speed }}</td>
+                    {% endfor %}
+                </tr>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td>@fat</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td>Larry the Bird</td>
+                    <td>I am Krishna</td>
+                    <td>@twitter</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</form>
 {% endblock %}
