--- a/mission_to_mars_flask/templates/index.html
+++ b/mission_to_mars_flask/templates/index.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 <h1 class="title">
-  Flask Login Example
+    Mission to Mars
 </h1>
 <h2 class="subtitle">
-  Easy authentication and authorization in Flask.
+    Your gateway to the future and the journey beyond
 </h2>
 {% endblock %}
