--- a/mission_to_mars_flask/templates/signup.html
+++ b/mission_to_mars_flask/templates/signup.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %} - Register {% endblock %}
 
 {% block content %}
 <div class="column is-4 is-offset-4">
