--- a/mission_to_mars_flask/templates/feature3_addNewCri.html
+++ b/mission_to_mars_flask/templates/feature3_addNewCri.html
@@ -1,24 +1,12 @@
 {% extends "base.html" %}
-
+{% block title %} - Add New Criteria {% endblock %}
 {% block content %}
 
-    <title>Add New Criteria</title>
-    <style>
-        .form-control{
-        font-size:16px;
-        }
-        .table-borderless{
-        font-size: 15px;
-        }
-    </style>
-
-
-  <body>
-  <div class="container">
-  <h1 align="center">Add New Criteria</h1>
-  <div class="col-md-auto">
-  <table class="table table-borderless">
-        <tbody>
+<div class="container">
+    <h1 class="title">Add New Criteria</h1>
+    <div class="col-md-auto">
+        <table class="table table-borderless">
+            <tbody>
             <tr>
                 <td>Name</td>
                 <td>
@@ -31,32 +19,27 @@
                     <input type="text" class="form-control" id="inputcridesc" placeholder="Input Description">
                 </td>
             </tr>
-
             <tr>
-            <td>column</td>
-            <td>
-             <select class="form-control" id="colselection">
-                 {% for col in col_list %}
-                    <option>{{ col }}</option>
-                 {% endfor %}
-             </select>
-            <td>
+                <td>column</td>
+                <td>
+                    <select class="form-control" id="colselection">
+                        {% for col in col_list %}
+                        <option>{{ col }}</option>
+                        {% endfor %}
+                    </select>
+                <td>
             </tr>
             <tr>
                 <td>Type</td>
                 <td>
-                <select class="form-control" id="typeselect">
-                <option>Range</option>
-                <option>Checkboxes</option>
-                <option>Radio Boxes</option>
-                </select>
+                    <select class="form-control" id="typeselect">
+                        <option>Range</option>
+                        <option>Checkboxes</option>
+                        <option>Radio Boxes</option>
+                    </select>
                 </td>
             </tr>
-</table>
+        </table>
+    </div>
 </div>
-
-</div>
-  </body>
-  </html>
-
 {% endblock %}
