feature5 small errors fixed

--- a/mission_to_mars_flask/templates/feature5.html
+++ b/mission_to_mars_flask/templates/feature5.html
@@ -2,7 +2,7 @@
 {% block title %} - candidate list {% endblock %}
 {% block content %}
 <h1 class="title">List of candidates based on criteria </h1>
-<form action="" type="POST">
+<form action="" method="POST">
     <div class="">
         <table class="table" id="candidate_list">
             <thead>
