--- a/mission_to_mars_flask/templates/base.html
+++ b/mission_to_mars_flask/templates/base.html
@@ -11,7 +11,7 @@
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="{{ url_for('static', filename='jquery.datetimepicker.css')}}"/>
+<!--    <link rel="stylesheet" href="{{ url_for('static', filename='jquery.datetimepicker.css')}}"/>-->
     <link rel="stylesheet" href="https://cdn.datatables.net/select/1.3.1/css/select.dataTables.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css">
 
@@ -28,7 +28,7 @@
     <!--    <script type="text/javascript"-->
     <!--            src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.43/js/bootstrap-datetimepicker.min.js"></script>-->
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='jquery.datetimepicker.js')}}"></script>
+<!--    <script type="text/javascript" src="{{ url_for('static', filename='jquery.datetimepicker.js')}}"></script>-->
     <script type="text/javascript" src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/select/1.3.1/js/dataTables.select.min.js"></script>
     <script src="{{ url_for('static', filename='moment.js') }}"></script>
